# swiggy-delivery-time-prediction

./: .gitignore  Dockerfile  Makefile  README.md  app.py  dvc.yaml  params.yaml  pyproject.toml  requirements-dev.txt  requirements-dockers.txt
.dvc/: config
.github/workflows/: ci_cd.yaml
data/processed/: .gitignore
deploy/scripts/: start_docker.sh
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Exp_1_drop_vs_impute.ipynb  Exp_2_adding_missing_indicator.ipynb  Exp_3_model_selection.ipynb  Exp_4_LGBM_HP_tuning.ipynb  Exp_5_RF_HP_tuning.ipynb  Exp_6_stacking_regressor_HP_tuning.ipynb  Exp_7_final_regressor.ipynb  data_cleaning_utils.py
scripts/: promote_model_to_production.py  sample_predictions.py
swiggy_delivery_time_prediction/: __init__.py
swiggy_delivery_time_prediction/data/: data_cleaning.py  training_test_split.py
swiggy_delivery_time_prediction/features/: data_preprocessing.py
swiggy_delivery_time_prediction/models/: model_evaluation.py  model_registration.py  model_training.py
tests/: test_model_performance.py  test_model_registration.py
