[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "swiggy_delivery_time_prediction"
version = "0.0.1"
description = "A machine learning project that predicts how long a Swiggy food delivery takes in minutes."
authors = [
  { name = "Sushrut Gaikwad" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["swiggy_delivery_time_prediction"]
force_sort_within_sections = true
